--- a/content/themes/phantom/partials/sidebar.hbs
+++ b/content/themes/phantom/partials/sidebar.hbs
@@ -12,9 +12,8 @@
 
 			<p class="description">{{@blog.description}}</p>
 			<div class="social-icons">
-				<a href="https://github.com/Bartinger" class="icon icon-github"></a>
-				<a href="https://plus.google.com/+DominicBartl?rel=author" class="icon icon-gplus"></a>
-				<a href="https://twitter.com/DevBartinger" class="icon icon-twitter"></a>
+				<a href="https://github.com/gnauhnoj" class="icon icon-github"></a>
+				<a href="https://twitter.com/gnauhnoj" class="icon icon-twitter"></a>
 				<a href="/rss" class="icon-rss"></a>
 			</div>
 		</header>
